[package]
name = "omniscient-messenger"
version = "0.1.0"
authors = ["Lyssieth <raxixor@rax.ee>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
rustbreak = { version = "2.0.0", features = ["bin_enc"] }
serde = { version = "1.0.125", features = ["derive"] }
serenity = "0.10.5"
tokio = { version = "1.5.0", features = ["full"] }
toml = "0.5.8"
color-eyre = "0.5.11"
better-panic = "0.2.0"